--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Ini adalah bagaimana tab akan diberi nama di browser</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Ini tajuk yang besar!</h1>
